# sprint-manager-tp1

./: .gitignore  CMakeLists.txt  README.md  SprintManager.cbp  SprintManager.depend  SprintManager.layout  dominios.cpp  doxygen.txt  main.cpp  projeto.cpp  projeto.hpp  run.py  run.sh  util.hpp
.github/ISSUE_TEMPLATE/: item-de-backlog.md
.github/workflows/: build.yml  linux-build.yml
lib/: CMakeLists.txt
lib/SQLiteCpp/include/SQLiteCpp/: Statement.h
manual/: build_run.md  index.md
src/: CMakeLists.txt  main.cpp
src/dominios/: Codigo.cpp  Codigo.hpp  Data.cpp  Data.hpp  Dominio.hpp  Email.cpp  Email.hpp  Estado.cpp  Estado.hpp  Mes.hpp  Nome.cpp  Nome.hpp  Papel.cpp  Papel.hpp  Prioridade.cpp  Prioridade.hpp  Propriedade.hpp  Senha.cpp  Senha.hpp  Tempo.cpp  Tempo.hpp  Texto.cpp  Texto.hpp  dominios.cpp  dominios.hpp
src/entidades/: HistoriaDeUsuario.cpp  HistoriaDeUsuario.hpp  HistoriaUsuario.cpp  HistoriaUsuario.hpp  Pessoa.cpp  Pessoa.hpp  PlanoSprint.cpp  PlanoSprint.hpp  Projeto.cpp  Projeto.hpp
src/util/: DateUtils.cpp  DateUtils.hpp  StringUtils.cpp  StringUtils.hpp  util.cpp
tests/: CMakeLists.txt
tests/dominios/: TUCodigo.cpp
